<resources>
    <string name="app_name">Entregable2</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_confirmation">Repita la contraseña</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_up_short">Registrarse</string>
    <string name="intro_sign_in_google">Acceder con Google</string>
    <string name="login_button_register">Regístrate</string>
    <string name="login_email_not_valid_short">Correo electrónico demasiado corto</string>
    <string name="login_pass_not_valid_short">Contraseña demasiado corta</string>
    <string name="login_error">Error al iniciar sesión</string>
    <string name="login_error_mail">Error al iniciar sesión con correo</string>
    <string name="login_error_mail_retry">Volver a intentar</string>
    <string name="login_error_reset_pass">No recuerdo mi contraseña</string>
    <string name="register_reset_mail_sent">Correo electrónico enviado a %1$s para reestablecer la contraseña</string>
    <string name="login_error_mail_register">Regístrate</string>
    <string name="login_error_email_verified">La cuenta aún no ha sido validada</string>
    <string name="login_error_email_verified_yes">Volver a enviar correo de validación</string>
    <string name="register_verification_mail_sent">Hemos enviado un correo a %1$s para completar la validación de tu cuenta.</string>
    <string name="register_verification_mail_error">Correo no validado.</string>
    <string name="login_error_email_verified_no">No enviar otro correo de validación.</string>
    <string name="register_reset_mail_error">Correo electrónico inválido.</string>
    <string name="default_web_client_id">46254930699-7nsf20phn780l5cddfka0c8okg2tva2f.apps.googleusercontent.com</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="location_rationale">Los permisos de ubicación son necesarios para el funcionamiento de la aplicación.</string>
    <string name="location_rationale_ok">Aceptar</string>
    <string name="location_denied">Permiso imprescindible denegado</string>
    <string name="login_error_mail_empty">El campo de correo electrónico está vacío</string>
    <string name="login_error_pass_empty">El campo de contraseña está vacío</string>
    <string name="register_verification_mail_not_sent">No ha sido posible enviar un correo de verificación.</string>
    <string name="login_error_google_play_services">Parece que Google Play Services no está actualizado.</string>
    <string name="login_error_google_play_services_yes">Actualizar</string>
    <string name="login_error_google_play_services_no">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>